Sidebar border color issue on dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -160,6 +160,10 @@ body {
     background-color: rgba(255, 255, 255, 0.03);
 }
 
+.dark #sidebar {
+    border-right-color: #000 !important;
+}
+
 .dark td, .dark th, .dark tr {
     border: 0 !important;
 }
